fixed rob's surname

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <h2>Greetings you!</h2>
             <p>We are:
               <ul>
-                <li>Rob Legatt</li>
+                <li>Rob Leggatt</li>
                 <li>Lukaz Leong</li>
                 <li>Devendra Magar</li>
                 <li>Victor Navarro</li>
