Added new site. Backed up old index page

--- a/deliverables.html
+++ b/deliverables.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>team GOOD</title>
+<title>deliverables - team GOOD</title>
 <link href="style.css" rel="stylesheet" type="text/css" /></head>
 
 <body class="oneColFixCtrHdr">
@@ -12,11 +12,11 @@
     <!-- end #header -->
     <img src="titleBar.png" alt="team GOOD" width="780" height="216" align="middle" /></div>
   <div id="navcontainer">
-  	<img src="navLeftActive.PNG" width="156" height="10" /><img src="navMidInactive.PNG" width="156" height="10" /><img src="navMidInactive.PNG" width="156" height="10" /><img src="navMidInactive.PNG" width="156" height="10" /><img src="navRightInactive.PNG" width="156" height="10" /><br>
+  	<img src="navLeftInactive.PNG" width="156" height="10" /><img src="navMidActive.PNG" width="156" height="10" /><img src="navMidInactive.PNG" width="156" height="10" /><img src="navMidInactive.PNG" width="156" height="10" /><img src="navRightInactive.PNG" width="156" height="10" /><br>
   </div>
-  <div id="navigation-active">
-  <a href="index.html">home</a>  </div>
   <div id="navigation">
+  <a href="index.html">home</a>  </div>
+  <div id="navigation-active">
   <a href="deliverables.html">deliverables</a>  </div>
   <div id="navigation">
   <a href="antgame.html">antgame</a>  </div>
@@ -25,21 +25,23 @@
   <div id="navigation">
   placeholder</div>
   <div id="mainContent">
-    <h1>software engineering done good </h1>
-    <p>Hi, and welcome to team GOOD, AKA: Software Engineering 2012 Group 6. This site will be used not only host our deliverables and final game client, but also useful resources and links for our team members, as well as anything else related to our team.</p>
-    <h2>team GOOD are...</h2>
-    <p><Strong>Project Leader:</strong> Rob Leggatt</p>
-    <p><strong>Analysis Team:</strong> Devendra Magar, Wojciech Tolsdorf</p>
-    <p><strong>Design Team: </strong> Rob Leggatt, Simon Turner</p>
-    <p><strong>Programming Team: </strong> David Sheldrick, Josh Pettitt</p>
-    <p><strong>Quality Assurance Team: </strong> Lukaz Leong, Victor Navarro</p>
-    <p>Website built and desiged by Josh Pettitt</p>
+    <h1>deliverables</h1>
+    <h2>project plan & group website - 23/2/2012</h2>
+    <p>Coming Soon...</p>
+    <h2>requirements specification, acceptance criteria & high level design specification - 12/3/2012</h2>
+    <p>Coming Soon...</p>
+    <h2>detailed design specification - 1/5/2012</h2>
+    <p>Coming Soon...</p>
+    <h2>source code, test specification, user documentation and peer assesment - 11/6/2012</h2>
+    <p>Coming Soon</p>
+    <h2>presentation - 13/6/2012</h2>
+    <p>Coming Soon...</p>
   </div>
   <div id="footer">
-    <p><a href="index.html">&gt;home&lt;</a></p>
-    <!-- end #footer --></div>
+    <p><a href="index.html">home</a></p>
+  <!-- end #footer --></div>
   <div id="footer">
-    <p><a href="deliverables.html">deliverables</a></p>
+    <p><a href="deliverables.html">&gt;deliverables&lt;</a></p>
     <!-- end #footer --></div>
   <div id="footer">
   	<p><a href="antgame.html">antgame</a></p>
