Redesigned website, archived older versions. Uploaded ProjectPlan.pdf Signed-off-by: Josh Pettitt <joz027@hotmail.com>

--- a/antgame.html
+++ b/antgame.html
@@ -18,32 +18,32 @@
   	<img src="navLeftInactive.PNG" width="156" height="10" /><img src="navMidInactive.PNG" width="156" height="10" /><img src="navMidActive.PNG" width="156" height="10" /><img src="navMidInactive.PNG" width="156" height="10" /><img src="navRightInactive.PNG" width="156" height="10" /><br>
   </div>
   <div id="navigation">
-  <a href="index.html">home</a>  </div>
+  <a href="index.html">Home</a>  </div>
   <div id="navigation">
-  <a href="deliverables.html">deliverables</a>  </div>
+  <a href="deliverables.html">Deliverables</a>  </div>
   <div id="navigation-active">
-  <a href="antgame.html">antgame</a></div>
+  <a href="antgame.html">AntGame</a></div>
   <div id="navigation">
-  <a href="resources.html">team resources</a>  </div>
+  <a href="resources.html">Team Resources</a>  </div>
   <div id="navigation">
-  placeholder</div>
+  Coming Soon...</div>
   <div id="mainContent">
-  <h1>coming soon...</h1>
+  <h2>Coming Soon...</h2>
   <!-- end #mainContent --></div>
   <div id="footer">
-    <p><a href="index.html">home</a></p>
+    <p><a href="index.html">Home</a></p>
   <!-- end #footer --></div>
   <div id="footer">
-    <p><a href="deliverables.html">deliverables</a></p>
+    <p><a href="deliverables.html">Deliverables</a></p>
     <!-- end #footer --></div>
   <div id="footer">
-  	<p><a href="antgame.html">&gt;antgame&lt;</a></p>
+  	<p><a href="antgame.html">&gt;AntGame&lt;</a></p>
     <!-- end #footer --></div>
   <div id="footer">
-    <p><a href="resources.html">team resources</a></p>
+    <p><a href="resources.html">Team Resources</a></p>
     <!-- end #footer --></div>
   <div id="footer">
-    <p>placeholder</p>
+    <p>Coming Soon...</p>
     </div>
 </div>
 <div id="navcontainer" />
