--- a/deliverables.html
+++ b/deliverables.html
@@ -15,42 +15,37 @@
   	<img src="navLeftInactive.PNG" width="156" height="10" /><img src="navMidActive.PNG" width="156" height="10" /><img src="navMidInactive.PNG" width="156" height="10" /><img src="navMidInactive.PNG" width="156" height="10" /><img src="navRightInactive.PNG" width="156" height="10" /><br>
   </div>
   <div id="navigation">
-  <a href="index.html">home</a>  </div>
+  <a href="index.html">Home</a>  </div>
   <div id="navigation-active">
-  <a href="deliverables.html">deliverables</a>  </div>
+  <a href="deliverables.html">Deliverables</a>  </div>
   <div id="navigation">
-  <a href="antgame.html">antgame</a>  </div>
+  <a href="antgame.html">AntGame</a>  </div>
   <div id="navigation">
-  <a href="resources.html">team resources</a>  </div>
+  <a href="resources.html">Team Resources</a>  </div>
   <div id="navigation">
-  placeholder</div>
+  Coming Soon...</div>
   <div id="mainContent">
-    <h1>deliverables</h1>
-    <h2>project plan & group website - 23/2/2012</h2>
-    <p>Coming Soon...</p>
-    <h2>requirements specification, acceptance criteria & high level design specification - 12/3/2012</h2>
-    <p>Coming Soon...</p>
-    <h2>detailed design specification - 1/5/2012</h2>
-    <p>Coming Soon...</p>
-    <h2>source code, test specification, user documentation and peer assesment - 11/6/2012</h2>
-    <p>Coming Soon</p>
-    <h2>presentation - 13/6/2012</h2>
-    <p>Coming Soon...</p>
+    <h2>Deliverables</h2>
+    <p><a href="ProjectPlan.pdf">Project Plan</a> - 23/2/2012</p>
+    <p>Requirements Specification, Acceptance Criteria & High Level Design Specification - 12/3/2012</p>
+    <p>Detailed Design Specification - 1/5/2012</p>
+    <p>Source Code, Test Specification, User Documentation and Peer Assessment - 11/6/2012</p>
+    <p>Presentation - 13/6/2012</p>
   </div>
   <div id="footer">
-    <p><a href="index.html">home</a></p>
+    <p><a href="index.html">Home</a></p>
   <!-- end #footer --></div>
   <div id="footer">
-    <p><a href="deliverables.html">&gt;deliverables&lt;</a></p>
+    <p><a href="deliverables.html">&gt;Deliverables&lt;</a></p>
     <!-- end #footer --></div>
   <div id="footer">
-  	<p><a href="antgame.html">antgame</a></p>
+  	<p><a href="antgame.html">AntGame</a></p>
     <!-- end #footer --></div>
   <div id="footer">
-    <p><a href="resources.html">team resources</a></p>
+    <p><a href="resources.html">Team Resources</a></p>
     <!-- end #footer --></div>
   <div id="footer">
-    <p>placeholder</p>
+    <p>Coming Soon...</p>
     </div>
 </div>
 <div id="navcontainer" />
