--- a/index.html
+++ b/index.html
@@ -15,40 +15,39 @@
   	<img src="navLeftActive.PNG" width="156" height="10" /><img src="navMidInactive.PNG" width="156" height="10" /><img src="navMidInactive.PNG" width="156" height="10" /><img src="navMidInactive.PNG" width="156" height="10" /><img src="navRightInactive.PNG" width="156" height="10" /><br>
   </div>
   <div id="navigation-active">
-  <a href="index.html">home</a>  </div>
+  <a href="index.html">Home</a>  </div>
   <div id="navigation">
-  <a href="deliverables.html">deliverables</a>  </div>
+  <a href="deliverables.html">Deliverables</a>  </div>
   <div id="navigation">
-  <a href="antgame.html">antgame</a>  </div>
+  <a href="antgame.html">AntGame</a>  </div>
   <div id="navigation">
-  <a href="resources.html">team resources</a>  </div>
-  <div id="navigation">
-  placeholder</div>
+  <a href="resources.html">Team Resources</a>  </div>
+  <div id="navigation">Coming Soon...</div>
   <div id="mainContent">
-    <h1>software engineering done good </h1>
-    <p>Hi, and welcome to team GOOD, AKA: Software Engineering 2012 Group 6. This site will be used not only host our deliverables and final game client, but also useful resources and links for our team members, as well as anything else related to our team.</p>
-    <h2>team GOOD are...</h2>
+    <h1>Software Engineering Done Good </h1>
+    <p>Hi, and welcome to Team Good, AKA: Software Engineering 2012 Group 6. This site will be used not only host our deliverables and final game client, but also useful resources and links for our team members, as well as anything else related to our team.</p>
+    <h2>Team Good are...</h2>
     <p><Strong>Project Leader:</strong> Rob Leggatt</p>
     <p><strong>Analysis Team:</strong> Devendra Magar, Wojciech Tolsdorf</p>
     <p><strong>Design Team: </strong> Rob Leggatt, Simon Turner</p>
     <p><strong>Programming Team: </strong> David Sheldrick, Josh Pettitt</p>
     <p><strong>Quality Assurance Team: </strong> Lukaz Leong, Victor Navarro</p>
-    <p>Website built and desiged by Josh Pettitt</p>
+    <p>Website built and designed by Josh Pettitt</p>
   </div>
   <div id="footer">
-    <p><a href="index.html">&gt;home&lt;</a></p>
+    <p><a href="index.html">&gt;Home&lt;</a></p>
     <!-- end #footer --></div>
   <div id="footer">
-    <p><a href="deliverables.html">deliverables</a></p>
+    <p><a href="deliverables.html">Deliverables</a></p>
     <!-- end #footer --></div>
   <div id="footer">
-  	<p><a href="antgame.html">antgame</a></p>
+  	<p><a href="antgame.html">AntGame</a></p>
     <!-- end #footer --></div>
   <div id="footer">
-    <p><a href="resources.html">team resources</a></p>
+    <p><a href="resources.html">Team Resources</a></p>
     <!-- end #footer --></div>
   <div id="footer">
-    <p>placeholder</p>
+    <p>Coming Soon...</p>
     </div>
 </div>
 <div id="navcontainer" />
