--- a/resources.html
+++ b/resources.html
@@ -16,41 +16,42 @@
   	<img src="navLeftInactive.PNG" width="156" height="10" /><img src="navMidInactive.PNG" width="156" height="10" /><img src="navMidInactive.PNG" width="156" height="10" /><img src="navMidActive.PNG" width="156" height="10" /><img src="navRightInactive.PNG" width="156" height="10" /><br>
   </div>
   <div id="navigation">
-  <a href="index.html">home</a>  </div>
+  <a href="index.html">Home</a>  </div>
   <div id="navigation">
-  <a href="deliverables.html">deliverables</a>  </div>
+  <a href="deliverables.html">Deliverables</a>  </div>
   <div id="navigation">
-  <a href="antgame.html">antgame</a></div>
+  <a href="antgame.html">AntGame</a></div>
   <div id="navigation-active">
-  <a href="resources.html">team resources</a>  </div>
+  <a href="resources.html">Team Resources</a>  </div>
   <div id="navigation">
-  placeholder</div>
+  Coming Soon...</div>
   <div id="mainContent">
-    <h1>team resources</h1>
+    <h2>Team Resources</h2>
     <p>Here is a list of resources we are using for this project.</p>
-    <h2>facebook</h2>
-      <p><a href="http://www.facebook.com/groups/238752696201840/">Software Engineering Group 6 facebook Group</a></p>
-      <p>Our facebook Group, and our main method of communication. Make sure to check this regularly to keep up with the rest of the team.</p>
-    <h2>GitHub</h2>
-      <p><a href="https://github.com/teamgood"> team GOOD's GitHub page</a></p>
-      <p>Our GitHub page. Contains our code repository. Make sure to set up your profile on <a href="https://github.com/signup/free">GitHub</a> and let David know your username so that he can add you to the group.
+    <p><a href="http://www.facebook.com/groups/238752696201840/">facebook Group</a></p>
+    <p>Our facebook Group, and our main method of communication. Make sure to check this regularly to keep up with the rest of the team.</p>
+    <p><a href="https://github.com/teamgood">GitHub</a></p>
+    <p>Our GitHub page. Contains our code repository. Make sure to set up your profile on <a href="https://github.com/signup/free">GitHub</a> and let David know your username so that he can add you to the group.
+    </p>
+    <p><strong>GoogleDocs - teamgoodg6</strong></p>
+    <p>Our GoogleDocs account. Contains all our deliverables and other useful stuff. Check the Software House Forum for the password, or talk to one of the other team members.
       <!-- end #mainContent -->
     </p>
   </div>
   <div id="footer">
-    <p><a href="index.html">home</a></p>
+    <p><a href="index.html">Home</a></p>
   <!-- end #footer --></div>
   <div id="footer">
-    <p><a href="deliverables.html">deliverables</a></p>
+    <p><a href="deliverables.html">Deliverables</a></p>
     <!-- end #footer --></div>
   <div id="footer">
-  	<p><a href="antgame.html">antgame</a></p>
+  	<p><a href="antgame.html">AntGame</a></p>
   <!-- end #footer --></div>
   <div id="footer">
-    <p><a href="resources.html">&gt;team resources&lt;</a></p>
+    <p><a href="resources.html">&gt;Team Resources&lt;</a></p>
     <!-- end #footer --></div>
   <div id="footer">
-    <p>placeholder</p>
+    <p>Coming Soon...</p>
     </div>
 </div>
 <div id="navcontainer" />
