--- a/indexOLD.html
+++ b/indexOLD.html
@@ -1,100 +1,57 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Team Good</title>
-    <meta name="description" content="">
-    <meta name="author" content="">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>team GOOD</title>
+<link href="style.css" rel="stylesheet" type="text/css" /></head>
 
-    <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
-    <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+<body class="oneColFixCtrHdr">
 
-    <!-- Le styles -->
-    <link href="./bootstrap/css/bootstrap.css" rel="stylesheet">
-    <style type="text/css">
-      body {
-        padding-top: 60px;
-        padding-bottom: 40px;
-      }
-      body:active,body:focus { outline: 0 none; }
-    </style>
-    <link href="./bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
-  </head>
-
-  <body>
-
-    <div class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <a class="brand">Software Engineering Group 6</a>
-          <div class="nav-collapse">
-            <ul class="nav">
-              <li class="active"><a href="#">Home</a></li>
-              <li><a href="#about">Deliverables</a></li>
-              <li><a href="http://github.com/teamgood">Code Repository</a></li>
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div>
-      </div>
+<div id="container">
+  <div id="header">
+    <!-- end #header -->
+    <img src="titleBar.png" alt="team GOOD" width="780" height="216" align="middle" /></div>
+  <div id="navcontainer">
+  	<img src="navLeftActive.PNG" width="156" height="10" /><img src="navMidInactive.PNG" width="156" height="10" /><img src="navMidInactive.PNG" width="156" height="10" /><img src="navMidInactive.PNG" width="156" height="10" /><img src="navRightInactive.PNG" width="156" height="10" /><br>
+  </div>
+  <div id="navigation-active">
+  <a href="index.html">home</a>  </div>
+  <div id="navigation">
+  <a href="deliverables.html">deliverables</a>  </div>
+  <div id="navigation">
+  <a href="antgame.html">antgame</a>  </div>
+  <div id="navigation">
+  <a href="resources.html">team resources</a>  </div>
+  <div id="navigation">
+  placeholder</div>
+  <div id="mainContent">
+    <h1>software engineering done good </h1>
+    <p>Hi, and welcome to team GOOD, AKA: Software Engineering 2012 Group 6. This site will be used not only host our deliverables and final game client, but also useful resources and links for our team members, as well as anything else related to our team.</p>
+    <h2>team GOOD are...</h2>
+    <p><Strong>Project Leader:</strong> Rob Leggatt</p>
+    <p><strong>Analysis Team:</strong> Devendra Magar, Wojciech Tolsdorf</p>
+    <p><strong>Design Team: </strong> Rob Leggatt, Simon Turner</p>
+    <p><strong>Programming Team: </strong> David Sheldrick, Josh Pettitt</p>
+    <p><strong>Quality Assurance Team: </strong> Lukaz Leong, Victor Navarro</p>
+    <p>Website built and desiged by Josh Pettitt</p>
+  </div>
+  <div id="footer">
+    <p><a href="index.html">&gt;home&lt;</a></p>
+    <!-- end #footer --></div>
+  <div id="footer">
+    <p><a href="deliverables.html">deliverables</a></p>
+    <!-- end #footer --></div>
+  <div id="footer">
+  	<p><a href="antgame.html">antgame</a></p>
+    <!-- end #footer --></div>
+  <div id="footer">
+    <p><a href="resources.html">team resources</a></p>
+    <!-- end #footer --></div>
+  <div id="footer">
+    <p>placeholder</p>
     </div>
-
-    <div class="container">
-
-      <!-- Main hero unit for a primary marketing message or call to action -->
-      <div class="hero-unit" id="main">
-        <div class="row">
-          <div class="span3">
-            <img src="./ant.png" />
-          </div>
-          <div class="span4">
-            <h2>Greetings you!</h2>
-            <p>We are:
-              <ul>
-                <li>Rob Leggatt</li>
-                <li>Lukaz Leong</li>
-                <li>Devendra Magar</li>
-                <li>Victor Navarro</li>
-                <li>Joshua Pettitt</li>
-                <li>David Sheldrick</li>
-                <li>Wojciech Tolsdorf</li>
-                <li>Simon Turner</li>
-              </ul>
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <hr>
-
-    </div> <!-- /container -->
-
-    <!-- Le javascript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="./bootstrap/js/jquery.js"></script>
-    <script src="./bootstrap/js/bootstrap-transition.js"></script>
-
-    <script src="./bootstrap/js/bootstrap-alert.js"></script>
-    <script src="./bootstrap/js/bootstrap-modal.js"></script>
-    <script src="./bootstrap/js/bootstrap-dropdown.js"></script>
-    <script src="./bootstrap/js/bootstrap-scrollspy.js"></script>
-    <script src="./bootstrap/js/bootstrap-tab.js"></script>
-    <script src="./bootstrap/js/bootstrap-tooltip.js"></script>
-
-    <script src="./bootstrap/js/bootstrap-popover.js"></script>
-    <script src="./bootstrap/js/bootstrap-button.js"></script>
-    <script src="./bootstrap/js/bootstrap-collapse.js"></script>
-    <script src="./bootstrap/js/bootstrap-carousel.js"></script>
-    <script src="./bootstrap/js/bootstrap-typeahead.js"></script>
-
-  </body>
-
+</div>
+<div id="navcontainer" />
+<p><img src="fNavLeftInactive.PNG" width="156" height="10" /><img src="navMidInactive.PNG" width="156" height="10" /><img src="navMidInactive.PNG" width="156" height="10" /><img src="navMidInactive.PNG" width="156" height="10" /><img src="fNavRightInactive.PNG" width="156" height="10" /></p>
+</body>
 </html>
