--- a/deliverables.html
+++ b/deliverables.html
@@ -26,7 +26,7 @@
   Coming Soon...</div>
   <div id="mainContent">
     <h2>Deliverables</h2>
-    <p><a href="ProjectPlan.pdf">Project Plan</a> - 23/2/2012</p>
+    <p><a href="https://github.com/teamgood/teamgood.github.com/blob/master/ProjectPlan.pdf?raw=true">Project Plan</a> - 23/2/2012</p>
     <p>Requirements Specification, Acceptance Criteria & High Level Design Specification - 12/3/2012</p>
     <p>Detailed Design Specification - 1/5/2012</p>
     <p>Source Code, Test Specification, User Documentation and Peer Assessment - 11/6/2012</p>
