--- a/antgame.html
+++ b/antgame.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>antgame - team GOOD</title>
+<title>AntGame - Team Good</title>
 <link href="style.css" rel="stylesheet" type="text/css" />
 <script src="Scripts/AC_RunActiveContent.js" type="text/javascript"></script>
 <script src="Scripts/AC_ActiveX.js" type="text/javascript"></script>
