fixed some formatting

--- a/spruce/deliverables.html
+++ b/spruce/deliverables.html
@@ -31,7 +31,7 @@
 		</div>
 		<div id="main">
 			
-			<h2>Deliverables</h2>
+			<h2 class="deepred">Deliverables</h2>
 	    <p><a href="https://github.com/teamgood/teamgood.github.com/blob/master/ProjectPlan.pdf?raw=true">Project Plan</a> - 23/2/2012</p>
 	    <p>Requirements Specification, Acceptance Criteria &amp; High Level Design Specification - 12/3/2012</p>
 	    <p>Detailed Design Specification - 1/5/2012</p>
