--- a/spruce/resources.html
+++ b/spruce/resources.html
@@ -3,7 +3,6 @@
 <head>
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <link rel="stylesheet" href="style.css" />
-
 </head>
 <body>
 	<div id="headerbg" class="pageCenter">
@@ -31,7 +30,7 @@
 		</div>
 		<div id="main">
 			
-			<h2>Team Resources</h2>
+			<h2 class="deepred">Team Resources</h2>
 	    <p>Here is a list of resources we are using for this project.</p>
 	    <p><a href="http://www.facebook.com/groups/238752696201840/">facebook Group</a></p>
 	    <p>Our facebook Group, and our main method of communication. Make sure to check this regularly to keep up with the rest of the team.</p>
