--- a/spruce/antgame.html
+++ b/spruce/antgame.html
@@ -6,13 +6,14 @@
 
 </head>
 <body>
-	<div id="headerbg" class="pageCenter">
-		<div id="header">
-			<h1>TEAM <span class="lightblue">GOOD</span></h1>
-		</div>
-	</div>
+
 	
 	<div id="page" class="pageCenter">
+		<div id="headerbg" class="pageCenter">
+			<div id="header">
+				<h1>TEAM <span class="lightblue">GOOD</span></h1>
+			</div>
+		</div>
 		<div id="menu">
 			<ul>
 				<li>
@@ -22,7 +23,7 @@
 					<a href="deliverables.html">Deliverables</a>
 				</li>
 				<li>
-					<span class="lightblue">Ant Game</span>
+					Ant Game
 				</li>
 				<li>
 					<a href="resources.html">Team Resources</a>
