--- a/spruce/deliverables.html
+++ b/spruce/deliverables.html
@@ -6,20 +6,21 @@
 
 </head>
 <body>
-	<div id="headerbg" class="pageCenter">
-		<div id="header">
-			<h1>TEAM <span class="lightblue">GOOD</span></h1>
-		</div>
-	</div>
-	
+		
 	<div id="page" class="pageCenter">
+		<div id="headerbg" class="pageCenter">
+			<div id="header">
+				<h1>TEAM <span class="lightblue">GOOD</span></h1>
+			</div>
+		</div>
+		
 		<div id="menu">
 			<ul>
 				<li>
 					<a href="index.html">Home</a>
 				</li>
 				<li>
-					<span class="lightblue">Deliverables</span>
+					Deliverables
 				</li>
 				<li>
 					<a href="antgame.html">Ant Game</a>
@@ -31,7 +32,7 @@
 		</div>
 		<div id="main">
 			
-			<h2 class="deepred">Deliverables</h2>
+			<h2>Deliverables</h2>
 	    <p><a href="https://github.com/teamgood/teamgood.github.com/blob/master/ProjectPlan.pdf?raw=true">Project Plan</a> - 23/2/2012</p>
 	    <p>Requirements Specification, Acceptance Criteria &amp; High Level Design Specification - 12/3/2012</p>
 	    <p>Detailed Design Specification - 1/5/2012</p>
