--- a/spruce/resources.html
+++ b/spruce/resources.html
@@ -5,13 +5,14 @@
 <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-	<div id="headerbg" class="pageCenter">
-		<div id="header">
-			<h1>TEAM <span class="lightblue">GOOD</span></h1>
-		</div>
-	</div>
+	
 	
 	<div id="page" class="pageCenter">
+		<div id="headerbg" class="pageCenter">
+			<div id="header">
+				<h1>TEAM <span class="lightblue">GOOD</span></h1>
+			</div>
+		</div>
 		<div id="menu">
 			<ul>
 				<li>
@@ -24,13 +25,13 @@
 					<a href="antgame.html">Ant Game</a>
 				</li>
 				<li>
-					<span class="lightblue">Team Resources</span>
+					Team Resources
 				</li>
 			</ul>
 		</div>
 		<div id="main">
 			
-			<h2 class="deepred">Team Resources</h2>
+			<h2>Team Resources</h2>
 	    <p>Here is a list of resources we are using for this project.</p>
 	    <p><a href="http://www.facebook.com/groups/238752696201840/">facebook Group</a></p>
 	    <p>Our facebook Group, and our main method of communication. Make sure to check this regularly to keep up with the rest of the team.</p>
