--- a/spruce/index.html
+++ b/spruce/index.html
@@ -6,17 +6,16 @@
 
 </head>
 <body>
-	<div id="headerbg" class="pageCenter">
-		<div id="header">
-			<h1>TEAM <span class="lightblue">GOOD</span></h1>
-		</div>
-	</div>
-	
 	<div id="page" class="pageCenter">
+		<div id="headerbg" class="pageCenter">
+			<div id="header">
+				<h1>TEAM <span class="lightblue">GOOD</span></h1>
+			</div>
+		</div>
 		<div id="menu">
 			<ul>
 				<li>
-					<span class="lightblue">Home</span>
+					Home
 				</li>
 				<li>
 					<a href="deliverables.html">Deliverables</a>
@@ -32,7 +31,7 @@
 		<div id="main">
 			
 
-		<h2 class="deepred">Software Engineering Done Good </h2>
+		<h2>Software Engineering Done Good </h2>
     <p>Hi, and welcome to Team Good, AKA: Software Engineering 2012 Group 6. This site will be used not only host our deliverables and final game client, but also useful resources and links for our team members, as well as anything else related to our team.</p>
     <h3>Team Good are</h3>
     <p><Strong>Project Leader:</strong> Rob Leggatt</p>
@@ -40,7 +39,6 @@
     <p><strong>Design Team: </strong> Rob Leggatt, Simon Turner</p>
     <p><strong>Programming Team: </strong> David Sheldrick, Josh Pettitt</p>
     <p><strong>Quality Assurance Team: </strong> Lukaz Leong, Victor Navarro</p>
-
 
 		</div>
 	</div>
