--- a/spruce/index.html
+++ b/spruce/index.html
@@ -32,7 +32,7 @@
 			
 
 		<h2>Software Engineering Done Good </h2>
-    <p>Hi, and welcome to Team Good, AKA: Software Engineering 2012 Group 6. This site will be used not only host our deliverables and final game client, but also useful resources and links for our team members, as well as anything else related to our team.</p>
+    <p>Hi, and welcome to Team Good, AKA: Software Engineering 2012 Group 6. This site will be used not only to host our deliverables and final game client, but also useful resources and links for our team members, as well as anything else related to our team.</p>
     <h3>Team Good are</h3>
     <p><Strong>Project Leader:</strong> Rob Leggatt</p>
     <p><strong>Analysis Team:</strong> Devendra Magar, Wojciech Tolsdorf</p>
