--- a/spruce/antgame.html
+++ b/spruce/antgame.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <link rel="stylesheet" href="style.css" />
-
+<title>Team Good - Ant Game</title>
 </head>
 <body>
 
