--- a/spruce/index.html
+++ b/spruce/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <link rel="stylesheet" href="style.css" />
-
+<title>Team Good</title>
 </head>
 <body>
 	<div id="page" class="pageCenter">
