--- a/spruce/resources.html
+++ b/spruce/resources.html
@@ -3,6 +3,7 @@
 <head>
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <link rel="stylesheet" href="style.css" />
+<title>Team Good - Resources</title>
 </head>
 <body>
 	
