restructured folder heirarchy

--- a/spruce/index.html
+++ b/spruce/index.html
@@ -18,10 +18,10 @@
 					Home
 				</li>
 				<li>
-					<a href="deliverables.html">Deliverables</a>
+					<a href="./deliverables/">Deliverables</a>
 				</li>
 				<li>
-					<a href="antgame.html">Ant Game</a>
+					<a href="./antgame/">Ant Game</a>
 				</li>
 				<li>
 					<a href="resources.html">Team Resources</a>
