--- a/spruce/resources.html
+++ b/spruce/resources.html
@@ -15,13 +15,13 @@
 		<div id="menu">
 			<ul>
 				<li>
-					<a href="index.html">Home</a>
+					<a href="../">Home</a>
 				</li>
 				<li>
-					<a href="deliverables.html">Deliverables</a>
+					<a href="./deliverables/">Deliverables</a>
 				</li>
 				<li>
-					<a href="antgame.html">Ant Game</a>
+					<a href="./antgame/">Ant Game</a>
 				</li>
 				<li>
 					Team Resources
