--- a/index.html
+++ b/index.html
@@ -1,56 +1,46 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<link rel="stylesheet" href="style.css" />
 <title>Team Good</title>
-<link href="style.css" rel="stylesheet" type="text/css" /></head>
+</head>
+<body>
+	<div id="page" class="pageCenter">
 
-<body class="oneColFixCtrHdr">
+			<div id="header">
+				<h1>TEAM <span class="lightblue">GOOD</span></h1>
+			</div>
 
-<div id="container">
-  <div id="header">
-    <!-- end #header -->
-    <img src="titleBar.png" alt="team GOOD" width="780" height="216" align="middle" /></div>
-  <div id="navcontainer">
-  	<img src="navLeftActive.PNG" width="156" height="10" /><img src="navMidInactive.PNG" width="156" height="10" /><img src="navMidInactive.PNG" width="156" height="10" /><img src="navMidInactive.PNG" width="156" height="10" /><img src="navRightInactive.PNG" width="156" height="10" /><br>
-  </div>
-  <div id="navigation-active">
-  <a href="index.html">Home</a>  </div>
-  <div id="navigation">
-  <a href="deliverables.html">Deliverables</a>  </div>
-  <div id="navigation">
-  <a href="antgame.html">AntGame</a>  </div>
-  <div id="navigation">
-  <a href="resources.html">Team Resources</a>  </div>
-  <div id="navigation">Coming Soon...</div>
-  <div id="mainContent">
-    <h1>Software Engineering Done Good </h1>
-    <p>Hi, and welcome to Team Good, AKA: Software Engineering 2012 Group 6. This site will be used not only host our deliverables and final game client, but also useful resources and links for our team members, as well as anything else related to our team.</p>
-    <h2>Team Good are...</h2>
+		<div id="menu">
+			<ul>
+				<li>
+					Home
+				</li>
+				<li>
+					<a href="./deliverables/">Deliverables</a>
+				</li>
+				<li>
+					<a href="./antgame/">Ant Game</a>
+				</li>
+				<li>
+					<a href="resources.html">Team Resources</a>
+				</li>
+			</ul>
+		</div>
+		<div id="main">
+			
+
+		<h2>Software Engineering Done Good </h2>
+    <p>Hi, and welcome to Team Good, AKA: Software Engineering 2012 Group 6. This site will be used not only to host our deliverables and final game client, but also useful resources and links for our team members, as well as anything else related to our team.</p>
+    <h3>Team Good are</h3>
     <p><Strong>Project Leader:</strong> Rob Leggatt</p>
     <p><strong>Analysis Team:</strong> Devendra Magar, Wojciech Tolsdorf</p>
     <p><strong>Design Team: </strong> Rob Leggatt, Simon Turner</p>
     <p><strong>Programming Team: </strong> David Sheldrick, Josh Pettitt</p>
     <p><strong>Quality Assurance Team: </strong> Lukaz Leong, Victor Navarro</p>
-    <p>Website built and designed by Josh Pettitt</p>
-  </div>
-  <div id="footer">
-    <p><a href="index.html">&gt;Home&lt;</a></p>
-    <!-- end #footer --></div>
-  <div id="footer">
-    <p><a href="deliverables.html">Deliverables</a></p>
-    <!-- end #footer --></div>
-  <div id="footer">
-  	<p><a href="antgame.html">AntGame</a></p>
-    <!-- end #footer --></div>
-  <div id="footer">
-    <p><a href="resources.html">Team Resources</a></p>
-    <!-- end #footer --></div>
-  <div id="footer">
-    <p>Coming Soon...</p>
-    </div>
-</div>
-<div id="navcontainer" />
-<p><img src="fNavLeftInactive.PNG" width="156" height="10" /><img src="navMidInactive.PNG" width="156" height="10" /><img src="navMidInactive.PNG" width="156" height="10" /><img src="navMidInactive.PNG" width="156" height="10" /><img src="fNavRightInactive.PNG" width="156" height="10" /></p>
+
+		</div>
+	</div>
 </body>
 </html>
