--- a/resources.html
+++ b/resources.html
@@ -1,60 +1,47 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Team Resources - Team Good</title>
-<link href="style.css" rel="stylesheet" type="text/css" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<link rel="stylesheet" href="style.css" />
+<title>Team Good - Resources</title>
 </head>
+<body>
+	
+	
+	<div id="page" class="pageCenter">
+		<div id="header">
+			<h1>TEAM <span class="lightblue">GOOD</span></h1>
+		</div>
+		<div id="menu">
+			<ul>
+				<li>
+					<a href="../">Home</a>
+				</li>
+				<li>
+					<a href="./deliverables/">Deliverables</a>
+				</li>
+				<li>
+					<a href="./antgame/">Ant Game</a>
+				</li>
+				<li>
+					Team Resources
+				</li>
+			</ul>
+		</div>
+		<div id="main">
+			
+			<h2>Team Resources</h2>
+	    <p>Here is a list of resources we are using for this project.</p>
+	    <p><a href="http://www.facebook.com/groups/238752696201840/">facebook Group</a></p>
+	    <p>Our facebook Group, and our main method of communication. Make sure to check this regularly to keep up with the rest of the team.</p>
+	    <p><a href="https://github.com/teamgood">GitHub</a></p>
+	    <p>Our GitHub page. Contains our code repository. Make sure to set up your profile on <a href="https://github.com/signup/free">GitHub</a> and let David know your username so that he can add you to the group.
+	    </p>
+	    <p><strong>GoogleDocs - teamgoodg6</strong></p>
+	    <p>Our GoogleDocs account. Contains all our deliverables and other useful stuff. Check the Software House Forum for the password, or talk to one of the other team members.</p>
 
-<body class="oneColFixCtrHdr">
-
-<div id="container">
-  <div id="header">
-    <!-- end #header -->
-    <img src="titleBar.png" alt="team GOOD" width="780" height="216" align="middle" /></div>
-  <div id="navcontainer">
-  	<img src="navLeftInactive.PNG" width="156" height="10" /><img src="navMidInactive.PNG" width="156" height="10" /><img src="navMidInactive.PNG" width="156" height="10" /><img src="navMidActive.PNG" width="156" height="10" /><img src="navRightInactive.PNG" width="156" height="10" /><br>
-  </div>
-  <div id="navigation">
-  <a href="index.html">Home</a>  </div>
-  <div id="navigation">
-  <a href="deliverables.html">Deliverables</a>  </div>
-  <div id="navigation">
-  <a href="antgame.html">AntGame</a></div>
-  <div id="navigation-active">
-  <a href="resources.html">Team Resources</a>  </div>
-  <div id="navigation">
-  Coming Soon...</div>
-  <div id="mainContent">
-    <h2>Team Resources</h2>
-    <p>Here is a list of resources we are using for this project.</p>
-    <p><a href="http://www.facebook.com/groups/238752696201840/">facebook Group</a></p>
-    <p>Our facebook Group, and our main method of communication. Make sure to check this regularly to keep up with the rest of the team.</p>
-    <p><a href="https://github.com/teamgood">GitHub</a></p>
-    <p>Our GitHub page. Contains our code repository. Make sure to set up your profile on <a href="https://github.com/signup/free">GitHub</a> and let David know your username so that he can add you to the group.
-    </p>
-    <p><strong>GoogleDocs - teamgoodg6</strong></p>
-    <p>Our GoogleDocs account. Contains all our deliverables and other useful stuff. Check the Software House Forum for the password, or talk to one of the other team members.
-      <!-- end #mainContent -->
-    </p>
-  </div>
-  <div id="footer">
-    <p><a href="index.html">Home</a></p>
-  <!-- end #footer --></div>
-  <div id="footer">
-    <p><a href="deliverables.html">Deliverables</a></p>
-    <!-- end #footer --></div>
-  <div id="footer">
-  	<p><a href="antgame.html">AntGame</a></p>
-  <!-- end #footer --></div>
-  <div id="footer">
-    <p><a href="resources.html">&gt;Team Resources&lt;</a></p>
-    <!-- end #footer --></div>
-  <div id="footer">
-    <p>Coming Soon...</p>
-    </div>
-</div>
-<div id="navcontainer" />
-<p><img src="fNavLeftInactive.PNG" width="156" height="10" /><img src="navMidInactive.PNG" width="156" height="10" /><img src="navMidInactive.PNG" width="156" height="10" /><img src="navMidInactive.PNG" width="156" height="10" /><img src="fNavRightInactive.PNG" width="156" height="10" /></p>
+		</div>
+	</div>
 </body>
 </html>
+
