Updated team roles (Josh and Simon swap)

--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
     <h3>Team Good are</h3>
     <p><Strong>Project Leader:</strong> Rob Leggatt</p>
     <p><strong>Analysis Team:</strong> Devendra Magar, Wojciech Tolsdorf</p>
-    <p><strong>Design Team: </strong> Rob Leggatt, Simon Turner</p>
-    <p><strong>Programming Team: </strong> David Sheldrick, Josh Pettitt</p>
+    <p><strong>Design Team: </strong> Rob Leggatt, Josh Pettitt</p>
+    <p><strong>Programming Team: </strong> David Sheldrick, Simon Turner</p>
     <p><strong>Quality Assurance Team: </strong> Lukaz Leong, Victor Navarro</p>
+    <p><strong>UPDATE 28-02-2012</strong>: Simon Turner and Josh Pettitt have swapped roles since the Project Plan was submitted.</p>
 
 		</div>
 	</div>
