--- a/antgame/index.html
+++ b/antgame/index.html
@@ -144,7 +144,7 @@
 						</form>
 					</div>
 					<div class="span4">
-						<a class="btn btn-success pull-right rightmost" href="#" id="ag-sm-go">Go &raquo;</a>
+						<a class="btn btn-success pull-right rightmost" href="#" id="ag-sm-run">Go &raquo;</a>
 					</div>
 				</div>
 			</div>
@@ -364,6 +364,55 @@
 	</div>
 	<!-- END CONTEST DEF -->
 
+	<!--  RUN SANS DEF -->
+	<div class="ag-run-sans container">
+		<div class="row">
+			<div class="span12 welcome">
+				<div class="row">
+					<div class="span3 offset2" style="text-align: center;">
+						<h3>
+							<img src="./img/redant.png"/>
+							<span id="ag-run-sans-red">Red Brain</span>
+						</h3>
+					</div>
+					<div class="span2" style="text-align: center;">
+						<h3 style="color: #555">
+							vs
+						</h3>
+					</div>
+					<div class="span3" style="text-align: center;">
+						<h3>
+							<img src="./img/blackant.png"/>
+							<span id="ag-run-sans-black">Black Brain</span>
+						</h3>
+					</div>
+					<div class="span2">
+						<a class="btn pull-right rightmost" href="#" id="ag-run-sans-cancel">
+							Cancel
+						</a>
+					</div>
+				</div>
+				<div class="row">
+					<div class="span6 offset3" style="text-align: center;">
+						<h3 style="margin: 20px 0;">
+							on <img src="./img/hexagon.png" />
+							<span id="ag-run-sans-world">World</span>
+						</h3>
+					</div>
+				</div>
+				<div class="row">
+					<div class="span6 offset3" style="text-align: center;">
+						<div class="progress progress-striped active">
+							<div class="bar" id="ag-run-sans-progress"style="width: 0%;">
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- END RUN SANS DEF -->
+
 	<div class="modal" id="ag-edit" style="display: none;">
 		<div class="modal-header">
 			<button class="close ag-edit-close">&times;</button>
@@ -383,6 +432,42 @@
 		</div>
 	</div>
 
+	<div class="modal" id="ag-sm-results" style="display: none;">
+		<div class="modal-header">
+			<button class="close" id="ag-sm-results-close" data-dismiss="modal">&times;</button>
+			<h3>Results</h3>
+		</div>
+		<div class="modal-body">
+			<table class="table table-striped table-bordered">
+				<thead>
+					<tr>
+						<td></td>
+						<td>
+							<img src="./img/redant.png"/>
+							<span id="ag-sm-results-red-name">
+							</span>
+						</td>
+						<td>
+							<img src="./img/blackant.png"/>
+							<span id="ag-sm-results-black-name">
+							</span>
+						</td>
+					</tr>
+				</thead>
+				<tr>
+					<th>Food</th>
+					<td id="ag-sm-results-red-food"></td>
+					<td id="ag-sm-results-black-food"></td>
+				</tr>
+				<tr>
+					<th>Deaths</th>
+					<td id="ag-sm-results-red-deaths"></td>
+					<td id="ag-sm-results-black-deaths"></td>
+				</tr>
+			</table>
+		</div>
+	</div>
+
 	<div id="contestSetup">
 	</div>
 	<div id="game">
@@ -393,7 +478,7 @@
 	</div>
 
 	<!-- breadcrumbs everywhere, all up in my face -->
-	<div class="container">
+	<div class="container" id="ag-bread">
 		<ul class="breadcrumb">
 			<li class="ag-root-bc">
 				<a href="#" class="ag-btn-root">Main Menu</a>
