--- a/antgame/tutorial.html
+++ b/antgame/tutorial.html
@@ -94,7 +94,7 @@
 								Keep an eye on that white bar at the bottom. That's the breadcrumb trail. It tells you where you are and where you've been. You can use it to travel back up in the menu structure. Using your browser's back button will take you away from AntGame and we don't want that to happen so remember to use the breadcrumbs instead!
 							</p>
 							<p>
-								From this screen you can either start a <a href="matches">single match</a> or a <a href="#contests">contest.</a> To do this, simply click the big blue button which corresponds to your choice of game type.
+								From this screen you can either start a <a href="#matches">single match</a> or a <a href="#contests">contest.</a> To do this, simply click the big blue button which corresponds to your choice of game type.
 							</p>
 							<div class="pull-right"><a href="#top"><i class="icon-chevron-up"></i> top</a></div>
 						</div>
