Latest build again

--- a/antgame/tutorial.html
+++ b/antgame/tutorial.html
@@ -398,7 +398,7 @@
 									<h3 class="antcode bleu">Move</h3>
 									<p>Above we see:</p>
 									<pre class="well antcode thinner"><span class="bleu">Move</span> st1 st2</pre>	
-									<p>This instruction causes an ant to attempt to move one step in the direction it is facing. If the ant is successful, it will go to the state specified by <span class="antcode">st1</span>. If the cell ahead is blocked for some reason, then it will go to the state specified by <span class="antcode">st2</span></p>. Be weary of using this instruction because, if an ant is successful in moving, they cannot do anything for the next 14 iterations the game!
+									<p>This instruction causes an ant to attempt to move one step in the direction it is facing. If the ant is successful, it will go to the state specified by <span class="antcode">st1</span>. If the cell ahead is blocked for some reason, then it will go to the state specified by <span class="antcode">st2</span></p>. Be weary of using this instruction because, if an ant is successful in moving, they cannot do anything for the next 14 iterations of the game!
 								</li>
 								<li>
 									<a name="brainsflip"></a>
