--- a/antgame/index.html
+++ b/antgame/index.html
@@ -32,6 +32,9 @@
 				<ul class="nav ag-root ag-sm ag-wl ag-bl ag-c">
 					<li><a href="./tutorial.html">How to Play</a></li>
 				</ul>
+				<ul class="nav ag-root ag-sm ag-wl ag-bl ag-c pull-right">
+					<li><a href="./tutorial.html#license">License Agreement</a></li>
+				</ul>
 				<div class="pull-right ag-cstats">
 					<a class="btn btn-warning ag-vis-on" href="#">Graphics On</a>
 					<a class="btn btn-danger ag-vis-off" href="#" style="display: none;">Graphics Off</a>
