--- a/antgame/tutorial.html
+++ b/antgame/tutorial.html
@@ -61,6 +61,7 @@
 										<li><a href="#worldsrules">Restrictions</a>
 									</ul>
 								</li>
+								<li><a href="#references">References and Resources Used</a></li>
 								<li><a href="#license">License Agreement</a></li>
 							</ul>
 						</div>
@@ -537,6 +538,28 @@
 							</ul>
 							<div clas
 							<div class="pull-right"><a href="#top"><i class="icon-chevron-up"></i> top</a></div>
+						</div>
+
+						<a name="references"></a>
+						<div class="docsection">
+							<hr>
+							<h2>References and Resources Used</h2>
+							<p>This project makes use of the following libraries:</p>
+							<ul>
+								<li><a href="http://jquery.com/">jQuery</a></li>
+								<li><a href="http://twitter.github.com/bootstrap/">Twitter Bootstrap</a></li>
+								<li><a href="http://silentmatt.com/biginteger/">BigInteger</a></li>
+							</ul>
+							<p>It was built using the following tools:</p>
+							<ul>
+								<li><a href="http://www.nodejs.org/">node.js</a></li>
+								<li><a href="http://github.com/caolan/nodeunit/">nodeunit</a></li>
+								<li><a href="http://www.lesscss.org">LESS</a></li>
+								<li><a href="http://www.python.org">Python</a></li>
+								<li><a href="http://www.sublimetext.com/">Sublime Text 2</a></li>
+							</ul>
+							<p>... Among others...</p>
+							<p>The example brain and world used on this page were provided by <a href="http://www.sussex.ac.uk/Users/mfb21/">Martin Berger</a>.</p>
 						</div>
 
 
